@@ -1,3 +1,8 @@
+2011-09-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50309
+	* g++.dg/cpp0x/noexcept14.C: New.
+
 2011-09-07  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/cpp0x/constexpr-ref3.C: New.
@@ -5,9 +10,9 @@
 	* g++.dg/cpp0x/sfinae11.C: Check for explanatory diagnostic.
 
 2011-09-07  Georg-Johann Lay  <avr@gjlay.de>
-	
+
 	* gcc.dg/section1.c: Don't xfail for avr.
-	
+
 2011-09-07  Georg-Johann Lay  <avr@gjlay.de>
 
 	PR tree-optimization/50322
