@@ -1,3 +1,9 @@
+2011-09-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50309
+	* decl.c (grokdeclarator): Check u.function.exception_specification
+	for error_mark_node.
+
 2011-09-07  Jason Merrill  <jason@redhat.com>
 
 	PR c++/50298
